[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_request_coalesce"
version = "0.1.0"
description = "fastapi_request_coalesce"
readme = "README.rst"
authors = [
  {name = "alfonsxh", email = "alfonsxh@gmail.com"}
]
maintainers = [
  {name = "alfonsxh", email = "alfonsxh@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/alfonsxh/fastapi_request_coalesce/issues"
changelog = "https://github.com/alfonsxh/fastapi_request_coalesce/blob/master/changelog.md"
homepage = "https://github.com/alfonsxh/fastapi_request_coalesce"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

